--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "recompose": "^0.30.0",
     "sort-by": "^1.2.0"
   },
   "scripts": {
